--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,3 @@
-
-# FitTrack - Fitness Tracking Application
-# Required Python Libraries
-
-# Core Data Processing
-pandas==2.1.4
-numpy==1.26.2
-
-# Streamlit Web Framework
-streamlit==1.29.0
-
-# Data Visualization
-plotly==5.18.0
-
-# Database (comes with Python, but listing for reference)
-# sqlite3 is built-in
-
-# Excel Export Support
-openpyxl==3.1.2
-
-# Additional useful libraries
-python-dateutil==2.8.2
+streamlit
+pandas
+plotly
